Small changes and fixes: - [a11y] overflow for the footer - styling for the attribute table in the `datamodel` tab
Code cleanup and Prettier

--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -237,15 +237,16 @@ blockquote,
   font-family: @gn-fontfamily-regular !important;
   font-weight: @gn-fontweight-regular;
 }
-div.ace_editor, div.ace_content, div.ace_content *,
+div.ace_editor,
+div.ace_content,
+div.ace_content *,
 [gn-json-edit] {
-  font-family: "Monaco", "Menlo", "Ubuntu Mono", "Consolas", "source-code-pro", monospace !important;
+  font-family: "Monaco", "Menlo", "Ubuntu Mono", "Consolas", "source-code-pro",
+    monospace !important;
   font-size: 14px !important;
   font-style: normal !important;
   font-weight: 400 !important;
 }
-
-
 
 // body
 body {
@@ -461,7 +462,9 @@ h6 {
 }
 
 // toolbar
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
   color: @gn-color;
   background-color: @ro-darkblue-light;
 }
@@ -470,6 +473,22 @@ h6 {
     li:has(.active) {
       color: @gn-color;
       background-color: @ro-darkblue-light;
+    }
+  }
+  .username-dropdown {
+    .gn-menuitem-xs {
+      padding-top: 8px;
+      &:hover,
+      &.active {
+        .gn-user-role {
+          color: @gn-color !important;
+        }
+      }
+    }
+    .open {
+      .gn-user-role {
+        color: @gn-color !important;
+      }
     }
   }
 }
@@ -591,7 +610,8 @@ h6 {
   line-height: calc(~"@{gn-crumbpath-height} - 8px");
   height: @gn-crumbpath-height;
   color: @gn-crumbpath-color;
-  h1, h2 {
+  h1,
+  h2 {
     font-size: 14px;
     display: inline-block;
     font-family: @gn-fontfamily-regular !important;
@@ -633,6 +653,7 @@ h6 {
 .gn-bottom-bar {
   background: none;
   position: relative;
+  overflow: unset;
   height: @gn-bottombar-height;
   color: @gn-bottombar-color !important;
   border: 0 @gn-bottombar-border-color;
@@ -992,6 +1013,9 @@ h6 {
         .gn-facet-input-group,
         .gn-facet-more {
           margin-left: 3px;
+          span {
+            opacity: 1;
+          }
         }
       }
     }
@@ -1512,6 +1536,19 @@ h6 {
     h1 {
       font-size: 36px;
     }
+    // attribute table
+    .gn-table-attribute {
+      .table {
+        th,
+        td {
+          padding: 10px;
+          border: 1px solid @table-border-color;
+        }
+        th {
+          background: @table-bg-accent;
+        }
+      }
+    }
     // highlight the active view
     .gn-view-menu-button {
       .dropdown-menu {
@@ -1525,7 +1562,6 @@ h6 {
     .gn-record {
       .gn-abstract {
         max-width: 800px;
-        //white-space: pre-wrap;
         margin-bottom: 20px !important;
         line-height: 1.6em;
       }
